--- a/options/options.css
+++ b/options/options.css
@@ -2,7 +2,7 @@ body {
   font-family: 'SF Pro Text', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #fafafa;
+  background-color: #efefef;
   color: #424242;
   line-height: 1.5;
 }
